--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# ELIXIR
+
 # The directory Mix will write compiled artifacts to.
 /_build/
 
@@ -27,3 +29,9 @@ elixir_epics-*.tar
 
 # LSP files
 .elixir_ls
+
+# RUST
+debug/
+target/
+Cargo.lock
+/priv
