--- a/native/flatbuffers/Cargo.toml
+++ b/native/flatbuffers/Cargo.toml
@@ -12,3 +12,5 @@ crate-type = ["cdylib"]
 [dependencies]
 flatbuffers = "23.5.26"
 rustler = "0.29.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
